--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Little Butterfly</string>
+    <string name="app_name">Petit Papillon</string>
     <string name="view_details">View details</string>
     <string name="promo">Sale -%1$d%%</string>
     <string name="add_to_favorites">Add to favorites</string>
@@ -15,14 +15,14 @@
     <string name="category_jouets">Toys</string>
     <string name="category_fournitures">Supplies</string>
     <string name="category_pyjamas">Pajamas</string>
-    <string name="little_butterfly">🦋 Little Butterfly</string>
+    <string name="little_butterfly">🦋 Petit Papillon</string>
     <string name="remove_from_favorites">Remove from Favorites</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="sizes_available">Available Sizes:</string>
     <string name="in_stock">%1$s in stock</string>
     <string name="no_description">No description available</string>
     <string name="product_not_found">Product not found.</string>
-    <string name="back">Back</string>
+
     <string name="no_product_found">No product found 🦋</string>
     <string name="search_product">Search for a product...</string>
     <string name="cart_empty_message">Your cart is empty 🛒</string>
@@ -40,10 +40,7 @@
     <string name="login_error">Incorrect email or password.</string>
     <string name="register_prompt">Dont have an account? Register now</string>
     <string name="register_title">Create an Account</string>
-    <string name="full_name">Full Name</string>
-    <string name="address">Address</string>
-    <string name="phone">Phone</string>
-    <string name="email">Email</string>
+
     <string name="password">Password</string>
     <string name="role">Role</string>
     <string name="client">Client</string>
@@ -65,5 +62,34 @@
 
     <string name="download_pdf_button">PDF</string>
     <string name="receipt_title">Order Receipt</string>
+        <!-- Order Form -->
+        <string name="full_name">Full Name</string>
+        <string name="email">Email Address</string>
+        <string name="address">Shipping Address</string>
+        <string name="phone">Phone</string>
+        <string name="payment_method">Payment Method</string>
+        <string name="credit_card">Credit Card</string>
+        <string name="paypal">PayPal</string>
+        <string name="cash_on_delivery">Cash on Delivery</string>
+        <string name="choose_payment_error">Please select a payment method</string>
+
+        <!-- Card Payment -->
+        <string name="card_number">Card Number</string>
+        <string name="expiry_date">Expiry Date (MM/YY)</string>
+        <string name="cvc">CVC</string>
+        <string name="continuer">Continue</string>
+        <string name="back">Back</string>
+        <string name="confirm_payment">Confirm Payment</string>
+    <string name="order_success">Order Successful</string>
+    <string name="order_thanks">🎉 Thank you for your order!</string>
+    <string name="order_confirmation_sent">A confirmation email has been sent to your address.</string>
+    <string name="delivery_info">🚚 Your order will be delivered within 24 hours.</string>
+
+    <string name="size">Size</string>
+    <string name="quantity">Quantity</string>
+    <string name="total">Total</string>
+    <string name="order_receipt">Order Receipt</string>
+    <string name="download">Download</string>
+
 
 </resources>
