--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -65,7 +65,7 @@
         <!-- Order Form -->
         <string name="full_name">Full Name</string>
         <string name="email">Email Address</string>
-        <string name="address">Shipping Address</string>
+        <string name="address"> Address</string>
         <string name="phone">Phone</string>
         <string name="payment_method">Payment Method</string>
         <string name="credit_card">Credit Card</string>
